bk_ida/gobmkida/c3/compute_surrounding_moyo_sizes
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/compute_surrounding_moyo_sizes/src/engine/dragon.c:2542:31: error: use of undeclared identifier 'byte_9C689F'
&& color == ( unsigned __int8)byte_9C689F[v37] 
                              ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/compute_surrounding_moyo_sizes/src/obj/1/dragon.o] Error 1
